Apply suggestions