@@ -1,13 +1,14 @@
 package org.jabref.gui.icon;
 
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 import java.util.ServiceLoader;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javafx.scene.Node;
 import javafx.scene.layout.HBox;
@@ -32,7 +33,7 @@ public final class IkonliIcon implements JabRefIcon {
     private final @Nullable Integer size;
 
     public IkonliIcon(Ikon... icons) {
-        this(Arrays.asList(icons), null, null);
+        this(List.of(icons), null, null);
     }
 
     public IkonliIcon(List<Ikon> icons) {
@@ -40,7 +41,7 @@ public final class IkonliIcon implements JabRefIcon {
     }
 
     public IkonliIcon(Color color, Ikon... icons) {
-        this(Arrays.asList(icons), color, null);
+        this(List.of(icons), color, null);
     }
 
     IkonliIcon(Color color, List<Ikon> icons) {
@@ -55,16 +56,15 @@ public final class IkonliIcon implements JabRefIcon {
 
     /// Finds the Ikonli icon whose name matches {@code code} (case-insensitive), tinted with {@code color}.
     public static Optional<JabRefIcon> findIcon(String code, Color color) {
-        return IkonliIcons.ALL.stream()
-                              .filter(ikon -> ikon.toString().equals(code.toUpperCase(Locale.ENGLISH)))
-                              .map(ikon -> new IkonliIcon(ikon).withColor(color))
-                              .findFirst();
+        return Optional.ofNullable(IkonliIcons.BY_NAME.get(code.toUpperCase(Locale.ENGLISH)))
+                       .map(ikon -> new IkonliIcon(ikon).withColor(color));
     }
 
     /// Holds every {@link Ikon} discovered via the {@link IkonProvider} service loader. Initialization on first
     /// access guaranteed by JVM.
     private static final class IkonliIcons {
         private static final Set<Ikon> ALL = load();
+        private static final Map<String, Ikon> BY_NAME = loadMap();
 
         private static Set<Ikon> load() {
             Set<Ikon> all = new HashSet<>();
@@ -72,6 +72,10 @@ public final class IkonliIcon implements JabRefIcon {
                 all.addAll(EnumSet.allOf(provider.getIkon()));
             }
             return Set.copyOf(all);
+        }
+
+        private static Map<String, Ikon> loadMap() {
+            return ALL.stream().collect(Collectors.toUnmodifiableMap(Ikon::toString, ikon -> ikon));
         }
     }
 
